jupyter notebook for colbert indexing via colab

--- a/ColbertIndexDataset.ipynb
+++ b/ColbertIndexDataset.ipynb
@@ -4,7 +4,160 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Index Dataset for ColBERT"
+    "# Setup Colab Env"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Access ARQMath on Drive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mounted at /content/drive\n"
+     ]
+    }
+   ],
+   "source": [
+    "from google.colab import drive\n",
+    "drive.mount('/content/drive')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['PostLinks.V1.3.xml', 'Comments.V1.3.xml', 'Votes.V1.3.xml', 'Posts.V1.3.xml', 'README_DATA.md', 'Tags.V1.3.xml', 'Posts.V1.3.zip', 'Users.V1.3.xml', 'Badges.V1.3.xml', 'Old versions', 'Thread Files (supplementary)']\n"
+     ]
+    }
+   ],
+   "source": [
+    "from os import listdir\n",
+    "from os.path import join\n",
+    "dirfiles = listdir(\"/content/drive/MyDrive/ARQMathAgg/dataset/\")\n",
+    "print(dirfiles)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Clone git repos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fatal: destination path 'MathIR' already exists and is not an empty directory.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git clone https://github.com/past12am/MathIR"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Setup ColBERT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try: # When on google Colab, let's install all dependencies with pip.\n",
+    "    import google.colab\n",
+    "    !pip install -U pip\n",
+    "    !pip install -e ColBERT/['faiss-gpu','torch']\n",
+    "except Exception:\n",
+    "  import sys; sys.path.insert(0, 'ColBERT/')\n",
+    "  try:\n",
+    "    from colbert import Indexer, Searcher\n",
+    "  except Exception:\n",
+    "    print(\"If you're running outside Colab, please make sure you install ColBERT in conda following the instructions in our README. You can also install (as above) with pip but it may install slower or less stable faiss or torch dependencies. Conda is recommended.\")\n",
+    "    assert False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Index Dataset with ColBERT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try: # When on google Colab, let's install all dependencies with pip.\n",
+    "    import google.colab\n",
+    "    !pip install -U pip\n",
+    "    !pip install -e ColBERT/['faiss-gpu','torch']\n",
+    "except Exception:\n",
+    "  import sys; sys.path.insert(0, 'ColBERT/')\n",
+    "  try:\n",
+    "    from colbert import Indexer, Searcher\n",
+    "  except Exception:\n",
+    "    print(\"If you're running outside Colab, please make sure you install ColBERT in conda following the instructions in our README. You can also install (as above) with pip but it may install slower or less stable faiss or torch dependencies. Conda is recommended.\")\n",
+    "    assert False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "dataroot = '/content/drive/MyDrive/ARQMathAgg/dataset/'\n",
+    "collection = os.path.join(dataroot, 'collection.tsv')\n",
+    "\n",
+    "\n",
+    "nbits = 4   # encode each dimension with 2 bits\n",
+    "doc_maxlen = 500   # truncate passages at 300 tokens\n",
+    "\n",
+    "checkpoint = 'colbert-ir/colbertv2.0'\n",
+    "index_name = f'arqmath.full.{nbits}bits'\n",
+    "\n",
+    "with Run().context(RunConfig(nranks=1, experiment=\"ColBERTTestARQMath\")):\n",
+    "\n",
+    "    config = ColBERTConfig(\n",
+    "        nbits=2,\n",
+    "        doc_maxlen=doc_maxlen,\n",
+    "        kmeans_niters=10\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "    print(\"Indexing\")\n",
+    "    indexer = Indexer(checkpoint=checkpoint, config=config)\n",
+    "    indexer.index(name=index_name, collection=collection, overwrite=True)"
    ]
   }
  ],
