--- a/ALBERT_v2.ipynb
+++ b/ALBERT_v2.ipynb
@@ -451,7 +451,7 @@
         "    print(all_measures)\n",
         "\n",
         "    eval_res = ir_measures.calc_aggregate(all_measures, qrels, runs)\n",
-        "    with open(f\"{eval_res_out_path}/res.json\", 'w', encoding='utf-8') as f:\n",
+        "    with open(f\"{eval_res_out_path}/res.csv\", 'w', encoding='utf-8') as f:\n",
         "      f.write(\"Metric,Value\\n\")\n",
         "      for measure in all_measures:\n",
         "        f.write(f\"{str(measure)},{eval_res[measure]}\\n\")\n",
